; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/umath/extr_ufunc_object.c__get_output_array_method.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/umath/extr_ufunc_object.c__get_output_array_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Py_None = common dso_local global i32* null, align 8
@Py_RETURN_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*)* @_get_output_array_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @_get_output_array_method(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** @Py_None, align 8
  %11 = icmp ne i32* %9, %10
  br i1 %11, label %12, label %37

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @PyArray_CheckExact(i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* @Py_RETURN_NONE, align 4
  br label %18

18:                                               ; preds = %16, %12
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32* @PyObject_GetAttr(i32* %19, i32* %20)
  store i32* %21, i32** %8, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = call i32 (...) @PyErr_Clear()
  br label %36

26:                                               ; preds = %18
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @PyCallable_Check(i32* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %33, label %30

30:                                               ; preds = %26
  %31 = load i32*, i32** %8, align 8
  %32 = call i32 @Py_DECREF(i32* %31)
  br label %35

33:                                               ; preds = %26
  %34 = load i32*, i32** %8, align 8
  store i32* %34, i32** %4, align 8
  br label %41

35:                                               ; preds = %30
  br label %36

36:                                               ; preds = %35, %24
  br label %37

37:                                               ; preds = %36, %3
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @Py_XINCREF(i32* %38)
  %40 = load i32*, i32** %7, align 8
  store i32* %40, i32** %4, align 8
  br label %41

41:                                               ; preds = %37, %33
  %42 = load i32*, i32** %4, align 8
  ret i32* %42
}

declare dso_local i64 @PyArray_CheckExact(i32*) #1

declare dso_local i32* @PyObject_GetAttr(i32*, i32*) #1

declare dso_local i32 @PyErr_Clear(...) #1

declare dso_local i32 @PyCallable_Check(i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32 @Py_XINCREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
